# glusterfs

./: 0002-glusterd-fix-op-versions-for-RHS-backwards-compatabi.patch  0002-tier-ctr-CTR-DB-named-lookup-heal-of-cold-tier-durin.patch  0003-glusterd-disabling-enable-shared-storage-option-shou.patch  0003-tier-ctr-Solution-for-db-locks-for-tier-migrator-and.patch  0003-tier-ctr-sql-Dafault-values-for-sql-cache-and-wal-si.patch  0004-firewall-spec-Create-glusterfs-firewall-service-if-f.patch  0004-rpc-set-bind-insecure-to-off-by-default.patch  0004-tier-ctr-sql-Dafault-values-for-sql-cache-and-wal-si.patch  0005-glusterd-disable-ping-timer-b-w-glusterd-and-make-ep.patch  0005-glusterd-probing-a-new-node-which-is-part-of-another.patch  0005-glusterd-spec-fixing-autogen-issue.patch  0006-event-epoll-Use-pollers-to-check-if-event_pool_dispa.patch  0006-libglusterfs-glusterd-Fix-compilation-errors.patch  0006-libglusterfs-pass-buffer-size-to-gf_store_read_and_t.patch  0007-Tier-cli-Change-detach-tier-commit-force-to-detach-t.patch  0007-build-remove-ghost-directory-entries.patch  0007-extra-enable-shared-storage-key-should-create-shared.patch  0008-Tier-glusterd-Do-not-allow-attach-tier-if-remove-bri.patch  0008-build-add-RHGS-specific-changes.patch  0008-posix-fix-posix_fgetxattr-to-return-the-correct-erro.patch  0009-glusterd-add-brick-change-add-brick-implementation-t.patch  0009-libgfapi-glfd-close-is-not-correctly-handled-for-asy.patch  0009-secalert-remove-setuid-bit-for-fusermount-glusterfs.patch  0010-build-packaging-corrections-for-RHEL-5.patch  (+796 more)
src/extras/: Makefile.am  (+4 more)
(+485 files in other folders)
